--- a/static/index.css
+++ b/static/index.css
@@ -1548,6 +1548,10 @@
 .c-post-aside__meta .icon {
   opacity: 0.5;
 }
+.c-post-aside__share-bar .c-headline {
+  --c-headline--margin-bottom: var(--spacing-s);
+  --c-headline--color: var(--color-grey-7);
+}
 .c-post-aside__share-link {
   --g-link--background-hover: transparent;
   --g-link--color: var(--color-primary-alpha-5);
